--- a/WebApp/Views/DoctorProfile/Index.cshtml
+++ b/WebApp/Views/DoctorProfile/Index.cshtml
@@ -806,6 +806,7 @@
 
         $('.datepicker').daterangepicker({
             singleDatePicker: true,
+            showDropdowns: true,
             calender_style: "picker_1"
         }, function (start, end, label) {
             console.log(start.toISOString(), end.toISOString(), label);
