--- a/WebApp/Views/HelpTicket/Index.cshtml
+++ b/WebApp/Views/HelpTicket/Index.cshtml
@@ -113,9 +113,9 @@
 
         <div class="compose-footer">
             <button id="send" class="btn btn-sm btn-primary" type="button" onclick="sendEmail()">Send</button>
-            <button class="btn btn-blank" onclick="document.getElementById('fileID').click();return false;">
+            @*<button class="btn btn-blank" onclick="document.getElementById('fileID').click();return false;">
                 <i class="fa fa-paperclip" aria-hidden="true" style="font-size: 18px; cursor: pointer;"></i>
-                </button>
+                </button>*@
           
 
             <input type="file" id="fileID" style="visibility: hidden; display: none" />
